--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Super Mario</title>
     <script type="module" src="/js/main.js"></script>
-    <title>Portfolio</title>
 </head>
 <body>
-    <canvas id="screen" width="1080" height="960"></canvas>
-    
+    <canvas id="screen" width="640" height="640"></canvas>
 </body>
 </html>
