--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,25 @@
 <html>
 <head>
     <title>Super Mario</title>
+    <style>
+        body{
+            background: black;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #screen{
+            margin-top: 2em;
+            height: 95vh;
+            margin: auto;
+            display: block;
+        }
+    </style>
     <script type="module" src="/js/main.js"></script>
 </head>
 <body>
-    <canvas id="screen" width="640" height="640"></canvas>
+    <canvas id="screen" width="400" height="224"></canvas>
 </body>
 </html>
