add instruction icon

--- a/public/instruction.html
+++ b/public/instruction.html
@@ -17,7 +17,7 @@
     <li>Press the 'D' key to move right.</li>
     <li>Press the 'A' key to move left.</li>
     <li>Combine 'S' with 'D' or 'S' with 'A' keys to speed up.</li>
-    <li>Interact with the <img src="./img/mario-block.png" alt="block" id="block"/> for quick navigation to links.</li>
+    <li>Interact with the <img src="./img/mario-block.png" alt="block" id="block"/> for quick navigation.</li>
 </ul>
 </div>
 
