--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
             text-decoration: none;
         }
 
-        ul {
+       .education-card ul {
             list-style: none;
         }
 
@@ -209,6 +209,7 @@
             flex-direction: row;
             justify-content: space-evenly;
             font-size: 15px;
+            
         }
 
         .skills-card li {
@@ -244,7 +245,15 @@
             left: 10px;
             color: white;
             cursor: pointer;
-            z-index: 0;
+
+
+        }
+
+
+        #instruction-icon{
+            position: absolute; 
+            top: 4px;
+            left: 70px;
 
         }
         .instruction-container{
@@ -257,7 +266,14 @@
             padding: 2em;
             z-index: 10; 
             position: absolute;
-            top: 10%;
+            width: 90%; 
+            left: 50%; 
+            top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
         }
 
         .instruction-card{
@@ -302,13 +318,15 @@
     <li>Press the 'D' key to move right.</li>
     <li>Press the 'A' key to move left.</li>
     <li>Combine 'S' with 'D' or 'S' with 'A' keys to sprint.</li>
-    <li>Interact with the  <img width="35" height="35" src="./img/mario-block.png" alt="block" id="block"/> for quick navigation to links.</li>
+    <li>Interact with the  <img width="35" height="35" src="./img/mario-block.png" alt="block" id="block"/> to navigate to different sections.</li>
 </ul>
 </div>
 </section>
 </div>
         <canvas id="screen" width="400" height="224"></canvas>
 <img width="40" height="40" src="https://img.icons8.com/material-sharp/48/FFFFFF/high-volume--v1.png" alt="high-volume--v1" id="volume-on"/>
+<img width="40" height="40" src="https://img.icons8.com/ios-filled/50/FFFFFF/brief.png" alt="brief" id="instruction-icon">
+
         <a id="about-link" href="#about">
             <h3>About</h3>
         </a>
