--- a/public/index.html
+++ b/public/index.html
@@ -84,22 +84,11 @@
         }
 
 
-
-       
-
-
         .icons {
             display: flex;
             align-items: center;
         }
 
-        .info {
-
-            /* margin-top: 100vh; */
-        }
-        #contact {
-            margin-top: 4em;
-        }
     </style>
 
 </head>
@@ -159,6 +148,17 @@
 
 
         <article id="about">
+            <div class="custom-shape-divider-top-1703946356">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M600,112.77C268.63,112.77,0,65.52,0,7.23V120H1200V7.23C1200,65.52,931.37,112.77,600,112.77Z" class="shape-fill"></path>
+    </svg>
+</div>
+<div class="custom-shape-divider-bottom-1703946457">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill"></path>
+    </svg>
+</div>
+            
             <h2>About</h2>
 
             <img src="./img/profile-pic4.jpg" alt="profile-pic" class="profile-pic">
