add top layer wave

--- a/public/index.html
+++ b/public/index.html
@@ -145,14 +145,11 @@
 
     </section>
     <section class="info">
-
+ <div class="spacer layer2" id="top-wave"></div>
 
         <article id="about">
-            <div class="custom-shape-divider-top-1703946356">
-    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-        <path d="M600,112.77C268.63,112.77,0,65.52,0,7.23V120H1200V7.23C1200,65.52,931.37,112.77,600,112.77Z" class="shape-fill"></path>
-    </svg>
-</div>
+           
+
 <div class="custom-shape-divider-bottom-1703946457">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill"></path>
@@ -378,7 +375,7 @@
                 <!-- <div class="arrow"></div> -->
                 <h2>Checkout my github for more projects!</h2>
             </div>
-            <div class="spacer layer1"></div>
+            <div class="spacer2 layer1"></div>
 
 
             <div class="custom-shape-divider-top-1703875443">
