--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <script type="module" src="/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
-
+    <script defer src="./js/app.js"></script>
     <style>
         #screen-container {
             position: relative;
@@ -156,9 +156,9 @@
 
             <h2>About</h2>
 
-            <img src="./img/profile-pic4.jpg" alt="profile-pic" class="profile-pic">
+            <img src="./img/profile-pic4.jpg" alt="profile-pic" class="profile-pic hidden">
 
-            <div class="about-container">
+            <div class="about-container hidden">
                 <h1>Parjal Rai</h1>
                 <b>Full-Stack Developer | 2 years experience</b>
 
