--- a/public/index.html
+++ b/public/index.html
@@ -158,24 +158,26 @@
 
             <img src="./img/profile-pic4.jpg" alt="profile-pic" class="profile-pic hidden">
 
-            <div class="about-container hidden">
+            <div class="about-container">
+                <div class="hidden">
                 <h1>Parjal Rai</h1>
                 <b>Full-Stack Developer | 2 years experience</b>
+                </div>
 
-                <p class="line-space">Hey there! 👋 I'm a coding enthusiast who loves crafting cool and
+                <p class="line-space hidden">Hey there! 👋 I'm a coding enthusiast who loves crafting cool and
                     user-friendly websites. From the magic of HTML, CSS, and JavaScript on the
                     front-end to the wizardry of Node.js and Java on the back-end – I've got
                     you covered!</p>
 
-                <p class="line-space">Check out my portfolio for some exciting projects. I'm
+                <p class="line-space hidden">Check out my portfolio for some exciting projects. I'm
                     open to new gigs and collaborations, so let's team up and build something
                     amazing together!</p>
                 <article id="contact">
                     <h3>Contact Me</h3>
-                    <a href="mailto:bayingray123@gmail.com">
+                    <a href="mailto:bayingray123@gmail.com" class="hidden">
                         <img width="110" height="90" src="./img/mail.png" alt="mail" />
                     </a>
-                    <a href="https://www.linkedin.com/in/parjal-rai-3853b7164/" target="_blank">
+                    <a href="https://www.linkedin.com/in/parjal-rai-3853b7164/" target="_blank" class="hidden">
                         <img width="80" height="80" src="./img/linkedin.png" alt="linkedin" />
                     </a>
 
@@ -198,7 +200,7 @@
             <article>
                 <h2>Work Experience</h2>
                 <div class="education-container">
-                    <div class="education-card">
+                    <div class="education-card hidden">
                         <p>Jul 2022- Jul 2023</p>
                         <div class="education-card-details">
                             <b>Software Developer Consultant, FDM, London</b>
@@ -224,7 +226,7 @@
             </article>
             <h2>Education</h2>
             <div class="education-container">
-                <div class="education-card">
+                <div class="education-card hidden">
                     <p>Oct 2023- Jan 2024</p>
                     <div class="education-card-details">
                         <b>La Fosse Academy, Software Development Bootcamp, Remote </b>
@@ -241,7 +243,7 @@
 
                     </div>
                 </div>
-                <div class="education-card">
+                <div class="education-card hidden">
                     <p>Jul 2023- Sep 2023</p>
                     <div class="education-card-details">
                         <b>Open Classrooms, Digital Skills Front-End Web Development Bootcamp, Remote </b>
@@ -256,7 +258,7 @@
                     </div>
                 </div>
 
-                <div class="education-card">
+                <div class="education-card hidden">
                     <p>Sep 2016- Jul 2020</p>
                     <div class="education-card-details">
                         <b>University of Glasgow, School of Life Sciences, Glasgow</b>
@@ -277,7 +279,7 @@
 
         <article id="portfolio">
             <h2>Portfolio</h2>
-            <div class="portfolio-container">
+            <div class="portfolio-container hidden">
                 <div class="portfolio-card">
                     <a href="https://pockche123.github.io/ohmyfood/">
                         <img src="./img/ohmyfood.jpg" alt="myfood" class="portfolio-image">
@@ -392,7 +394,7 @@
 
             <h2>Skills</h2>
             <div class="skills-container">
-                <div class="skills-card">
+                <div class="skills-card hidden">
                     <h3>Technical Skills</h3>
                     <ul>
                         <li>HTML5 - 2 years</li>
@@ -409,7 +411,7 @@
                         <li>Docker - 1 year</li>
                     </ul>
                 </div>
-                <div class="skills-card">
+                <div class="skills-card hidden">
                     <h3>Soft Skills</h3>
                     <ul>
                         <li>Communication - 5 years</li>
@@ -417,7 +419,7 @@
                         <li>Team Collaboration - 5 years</li>
                     </ul>
                 </div>
-                <div class="skills-card">
+                <div class="skills-card hidden">
                     <h3>Other Skills</h3>
                     <ul>
                         <li>Agile - 2 years</li>
