--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                         <li>Press the 'W' key to jump.</li>
                         <li>Press the 'D' key to move right.</li>
                         <li>Press the 'A' key to move left.</li>
-                        <li>Combine 'S' with 'D' or 'S' with 'A' keys to sprint.</li>
+                        <li>Press 'S + D'  or 'S + A' keys to sprint.</li>
                         <li>Interact with the <img width="35" height="35" src="./img/mario-block.png" alt="block"
                                 id="block" /> to navigate to different sections.</li>
                     </ul>
