--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Parjal Rai</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/styles/about.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="stylesheet" href="./assets/styles/portfolio.css">
@@ -13,9 +12,6 @@
     <link rel="stylesheet" href="./assets/styles/screen.css">
     <link rel="stylesheet" href="./assets/styles/education.css">
     <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/x-icon">
-
-
-
     <script type="module" src="/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
     <script defer src="./js/app.js"></script>
@@ -81,10 +77,7 @@
         }
 
 
-        .icons {
-            display: flex;
-            align-items: center;
-        }
+     
     </style>
 
 </head>
@@ -107,7 +100,7 @@
                         <li>Press the 'W' key to jump.</li>
                         <li>Press the 'D' key to move right.</li>
                         <li>Press the 'A' key to move left.</li>
-                        <li>Press 'S + D'  or 'S + A' keys to sprint.</li>
+                        <li>Press the 'S + D'  or 'S + A' keys to sprint.</li>
                         <li>Interact with the <img width="35" height="35" src="./img/mario-block.png" alt="block"
                                 id="block" /> to navigate to different sections.</li>
                     </ul>
@@ -130,7 +123,7 @@
             <h3>Skills</h3>
         </a>
         <a id="portfolio-link" href="#portfolio">
-            <h3>Portfolio</h3>
+            <h3>Projects</h3>
         </a>
 
 
@@ -278,9 +271,9 @@
         </article>
 
         <article id="portfolio">
-            <h2>Portfolio</h2>
-            <div class="portfolio-container hidden">
-                <div class="portfolio-card">
+            <h2>Projects</h2>
+            <div class="portfolio-container">
+                <div class="portfolio-card hidden">
                     <a href="https://pockche123.github.io/ohmyfood/">
                         <img src="./img/ohmyfood.jpg" alt="myfood" class="portfolio-image">
                     </a>
@@ -297,7 +290,7 @@
                 </div>
 
 
-                <div class="portfolio-card">
+                <div class="portfolio-card hidden">
                     <a href="https://resonance-music-app.netlify.app/">
                         <img src="./img/music-app.jpg" alt="music-app" id="music-app-image" class="portfolio-image">
                     </a>
@@ -314,7 +307,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-card">
+                <div class="portfolio-card hidden">
                     <a href="https://www.youtube.com/watch?v=kpvrcBY2m5U" target="_blank">
                         <img src="./img/noteworthy.jpg" alt="noteworthy" class="portfolio-image">
                     </a>
@@ -339,7 +332,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-card">
+                <div class="portfolio-card hidden">
                     <a href="https://www.youtube.com/watch?v=afNW69mkX4A" target="_blank">
                         <img src="./img/florin.jpg" alt="florin-pic" class="portfolio-image">
                     </a>
@@ -372,7 +365,7 @@
                 </a>
 
                 <img width="80" height="80" src='./assets/icons8-left-arrow.gif' alt="arrow" />
-                <!-- <div class="arrow"></div> -->
+                <div class="arrow"></div>
                 <h2>Checkout my github for more projects!</h2>
             </div>
             <div class="spacer2 layer1"></div>
