fix skill in mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -146,13 +146,15 @@
                     </path>
                 </svg>
             </div>
-
+           <div class="title">
             <h2>About</h2>
-
+            </div>
+            
             <img src="./img/profile-pic4.jpg" alt="profile-pic" class="profile-pic hidden">
 
             <div class="about-container">
                 <div class="hidden">
+                
                 <h1>Parjal Rai</h1>
                 <b>Full-Stack Developer | 2 years experience</b>
                 </div>
