--- a/public/index.html
+++ b/public/index.html
@@ -356,6 +356,8 @@
                         <li>Node.js - 1 year</li>
                         <li>SQL - 2 years</li>
                         <li>MongoDb - 1 year</li>
+                        <li>Jest Testing</li>
+                        <li>Junit Testing</li>
                         <li>Github - 1 year</li>
                         <li>Gitlab - 1 year</li>
                         <li>Docker - 1 year</li>
