add new project to portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -301,8 +301,8 @@
                         <img width="100" height="100" src="https://img.icons8.com/color/480/html-5--v1.png"
                             alt="html-5--v1" />
                         <img width="100" height="100" src="https://img.icons8.com/fluency/96/css3.png" alt="css3" />
-                        <img width="96" height="96" src="https://img.icons8.com/color/96/javascript--v1.png"
-                            alt="javascript--v1" />
+                        <img width="100" height="100" src="https://img.icons8.com/plasticine/100/react.png"
+                            alt="react" />
                         <img width="96" height="96" src="https://img.icons8.com/color/96/nodejs.png"
                             alt="nodejs" />&nbsp;
                         <img width="60" height="60" src="https://img.icons8.com/ios/50/express-js.png"
@@ -311,6 +311,27 @@
                             alt="postgreesql" />
                         <img width="96" height="96" src="https://img.icons8.com/fluency/96/docker.png" alt="docker" />
                     </div>
+                </div>
+                
+                <div class="portfolio-card hidden">
+                    <a href="https://www.youtube.com/watch?v=EMqKw5VuFEc" target="_blank">
+                        <img width="100%" src="./img/travel-guide.jpg" alt="travel-guide" class="portfolio-image" >
+                    </a>
+                    <div class="icons">
+                       <a href="https://github.com/pockche123/TravelGuide" target="_blank">
+                            <img width="95" height="95" src="https://img.icons8.com/glyph-neue/128/FFFFFF/github.png"
+                                class="github-image">
+                     </a>
+                                  <img width="100" height="100" src="https://img.icons8.com/color/480/html-5--v1.png"
+                            alt="html-5--v1" />
+                        <img width="100" height="100" src="https://img.icons8.com/fluency/96/css3.png" alt="css3" />
+                        <img width="96" height="96" src="https://img.icons8.com/color/96/python--v1.png" alt="python--v1"/>
+                          <img width="100" height="100" src="https://img.icons8.com/plasticine/100/react.png"
+                            alt="react" />
+                        <img width="96" height="96" src="https://img.icons8.com/color/96/postgreesql.png"
+                            alt="postgreesql" />
+                        <img width="95" height="95" src="./img/websocket.png" alt="websocket"/>
+                       </div>
                 </div>
             </div>
 
@@ -351,6 +372,7 @@
                         <li>CSS - 2 years</li>
                         <li>JavaScript - 2 years</li>
                         <li>TypeScript - 1 year</li>
+                        <li>Python  - < 1 year </li>
                         <li>React - 2 years</li>
                         <li>Java - 2 years</li>
                         <li>Node.js - 1 year</li>
