--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,16 @@
     <link rel="stylesheet" href="./assets/styles/screen.css">
     <link rel="stylesheet" href="./assets/styles/education.css">
     <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/x-icon">
-    <script type="module" src="/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
-    <script defer src="./js/app.js"></script>
-    <script src="https://kit.fontawesome.com/4292108d38.js" crossorigin="anonymous"></script>
+    <script type="module" src="/js/main.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js" defer></script>
+    <script src="./js/app.js" defer></script>
+    <script src="https://kit.fontawesome.com/4292108d38.js" crossorigin="anonymous" defer></script>
+
 </head>
 
 <body>
 
-    <input type="checkbox" id="check"/>
+    <input type="checkbox" id="check" />
     <label for="check">
         <i class="fas fa-bars" id="btn"></i>
         <i class="fas fa-times" id="cancel"></i>
@@ -312,26 +313,27 @@
                         <img width="96" height="96" src="https://img.icons8.com/fluency/96/docker.png" alt="docker" />
                     </div>
                 </div>
-                
+
                 <div class="portfolio-card hidden">
                     <a href="https://www.youtube.com/watch?v=EMqKw5VuFEc" target="_blank">
-                        <img width="100%" src="./img/travel-guide.jpg" alt="travel-guide" class="portfolio-image" >
+                        <img width="100%" src="./img/travel-guide.jpg" alt="travel-guide" class="portfolio-image">
                     </a>
                     <div class="icons">
-                       <a href="https://github.com/pockche123/TravelGuide" target="_blank">
+                        <a href="https://github.com/pockche123/TravelGuide" target="_blank">
                             <img width="95" height="95" src="https://img.icons8.com/glyph-neue/128/FFFFFF/github.png"
                                 class="github-image">
-                     </a>
-                                  <img width="100" height="100" src="https://img.icons8.com/color/480/html-5--v1.png"
+                        </a>
+                        <img width="100" height="100" src="https://img.icons8.com/color/480/html-5--v1.png"
                             alt="html-5--v1" />
                         <img width="100" height="100" src="https://img.icons8.com/fluency/96/css3.png" alt="css3" />
-                        <img width="96" height="96" src="https://img.icons8.com/color/96/python--v1.png" alt="python--v1"/>
-                          <img width="100" height="100" src="https://img.icons8.com/plasticine/100/react.png"
+                        <img width="96" height="96" src="https://img.icons8.com/color/96/python--v1.png"
+                            alt="python--v1" />
+                        <img width="100" height="100" src="https://img.icons8.com/plasticine/100/react.png"
                             alt="react" />
                         <img width="96" height="96" src="https://img.icons8.com/color/96/postgreesql.png"
                             alt="postgreesql" />
-                        <img width="95" height="95" src="./img/websocket.png" alt="websocket"/>
-                       </div>
+                        <img width="95" height="95" src="./img/websocket.png" alt="websocket" />
+                    </div>
                 </div>
             </div>
 
@@ -372,7 +374,7 @@
                         <li>CSS - 2 years</li>
                         <li>JavaScript - 2 years</li>
                         <li>TypeScript - 1 year</li>
-                        <li>Python  - < 1 year </li>
+                        <li>Python - < 1 year </li>
                         <li>React - 2 years</li>
                         <li>Java - 2 years</li>
                         <li>Node.js - 1 year</li>
@@ -467,12 +469,12 @@
     });
 
 </script>
-    <script>
-  
+<script>
+
     var links = document.querySelectorAll('.link');
 
-    links.forEach(function(link) {
-        link.addEventListener('click', function() {
+    links.forEach(function (link) {
+        link.addEventListener('click', function () {
             document.getElementById('check').click();
         });
     });
