--- a/public/index.html
+++ b/public/index.html
@@ -399,6 +399,7 @@
                     <h3>Other Skills</h3>
                     <ul>
                         <li>Agile - 2 years</li>
+                        <li>Figma - 1 year</li>
                     </ul>
                 </div>
             </div>
