fix blob animation

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/styles/education.css">
     <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/x-icon">
     <script type="module" src="/js/main.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
     <script src="./js/app.js" defer></script>
     <script src="https://kit.fontawesome.com/4292108d38.js" crossorigin="anonymous" defer></script>
 
@@ -433,6 +433,7 @@
         { repeat: 999, duration: 3000, yoyo: true }
     ).start();
 </script>
+
 
 <script>
     // JavaScript for smooth scroll
