--- a/public/index.html
+++ b/public/index.html
@@ -424,7 +424,7 @@
 
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
 <script>
     const tween = KUTE.fromTo(
         '#blob1',
