--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <main>
 
     <input type="checkbox" id="check" />
     <label for="check">
@@ -420,10 +421,10 @@
 
         </article>
     </section>
+</main>
 
 
 
-</body>
 <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
 <script>
     const tween = KUTE.fromTo(
@@ -507,6 +508,6 @@
   </script>
 
 
-
+</body>
 
 </html>
